Feat: add pagination to loans endpoint